[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=0.27", "numpy>=1.13"]
build-backend = "setuptools.build_meta"

[project]
name = "size-constrained-clustering"
version = "0.1.2"
description = "Size Constrained Clustering solver"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
  {name = "Jing Wang", email = "jingw2@foxmail.com"},
]
urls = {Homepage = "https://github.com/jingw2/size_constrained_clustering"}

dependencies = [
    "joblib>=1.2.0",
    "psutil>=6.1.0",
    "numpy==2.1.3",
    "scipy>=1.14.1",
    "ortools==9.11.4210",
    "six>=1.16.0",
    "Cython==3.0.11",
    "scikit_learn>=1.5.2",
]
