[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=0.29", "numpy>=2.0"]
build-backend = "setuptools.build_meta"
[project]
name = "size-constrained-clustering"
version = "0.1.3"
description = "Size Constrained Clustering solver"
readme = "README.md"
requires-python = ">=3.8" # Updated for modern numpy/scipy
license = {text = "MIT"}
authors = [
  {name = "Jing Wang", email = "jingw2@foxmail.com"},
]
urls = {Homepage = "https://github.com/jingw2/size_constrained_clustering"}
dependencies = [
    "joblib>=1.2.0",
    "psutil>=6.0.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "ortools>=9.11,<10.0", # Keep ortools in the 9.x series for stability
    "six>=1.16.0",
    "Cython>=3.0.0",
    "scikit-learn>=1.5.0",
]
